more progress on nativeBuild and deployment